test/parser/bad/non_printable_character.ulm
.text
main:
    nop

.data
; ❤️ is an unicode character which is encoded in UTF-8. The resulting sequence
; contains non printable ASCII characters.
a: .string "foo ❤️"